changes for demo

--- a/openshift-tasks/Jenkinsfile
+++ b/openshift-tasks/Jenkinsfile
@@ -76,7 +76,7 @@ podTemplate(
         script {
           openshift.withCluster() {
             openshift.withProject("${devProject}") {
-              openshift.selector("bc", "tasks").startBuild("--from-file=./target/openshift-tasks.war", "--wait=true")
+              openshift.selector("bc", "tasks").startBuild("--from-file=./target/demo-logicalis.war", "--wait=true")
               openshift.tag("tasks:latest", "tasks:${devTag}")
             }
           }
